--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
               with:
                   node-version: '20'
                   cache: 'npm'
-                  cache-dependency-path: './blog/package-lock.json'
+                  cache-dependency-path: './package-lock.json'
             - name: Setup Pages
               id: pages
               uses: actions/configure-pages@v4
